prevent shifting in x when not as much content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@
 html {
   display: flex;
   justify-content: center;
+  scrollbar-gutter: stable;
 }
 
 body {
